--- a/portfolio.html
+++ b/portfolio.html
@@ -23,26 +23,26 @@
 <body>
   <!--Шапка проекта-->
   <header class="header">
-    <div class="container header-container">
-      <nav class="site-nav ">
-        <a class="logo link " href="./index.html"> <span class="logo-color">Web</span>Studio</a>
-        <ul class="site-list list ">
-          <li class="nav-item"><a class="site-link  link" href="./index.html">Студия</a></li>
-          <li class="nav-item"><a class="site-link current link after-link" href="">Портфолио</a></li>
-          <li class="nav-item"><a class="site-link link" href="">Контакты</a></li>
+    <div class="container header__container">
+      <nav class="site__nav ">
+        <a class="logo link " href="./index.html"> <span class="logo__color">Web</span>Studio</a>
+        <ul class="site__list list ">
+          <li class="site__item"><a class="site__link link" href="./index.html">Студия</a></li>
+          <li class="site__item"><a class="site__link current link site__after_link" href="">Портфолио</a></li>
+          <li class="site__item"><a class="site__link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact-list list">
-        <li class="contact-item">
-          <a class="contact-link link" href="mailto:info@devstudio.com">
-            <svg class="svg-mail">
+      <ul class="contact__list list">
+        <li class="contact__item">
+          <a class="contact__link link" href="mailto:info@devstudio.com">
+            <svg class="contact__svg_mail">
               <use href="./images/icons-svg/symbol-defs.svg#icon-mail"></use>
             </svg>
             info@devstudio.com</a>
         </li>
-        <li class="contact-item">
-          <a class="contact-link link" href="tel:+380961111111">
-            <svg class="svg-mail">
+        <li class="contact__item">
+          <a class="contact__link link" href="tel:+380961111111">
+            <svg class="contact__svg_mail">
               <use href="./images/icons-svg/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a>
@@ -181,7 +181,7 @@
   <footer class="footer">
     <div class="container container-footer">
       <div class="one-address">
-        <a class="footer-logo link" href=""><span class="logo-color">Web</span>Studio</a>
+        <a class="footer-logo link" href=""><span class="logo__color">Web</span>Studio</a>
         <address class="address">
           <a class="address-link link" href="https://goo.gl/maps/BGYhrAwLSRzeAxM98" target="_blank"
             rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
@@ -195,7 +195,6 @@
           </ul>
         </address>
       </div>
-
       <div class="footer-set">
         <h3 class="title-footer"> присоединяйтесь </h3>
         <ul class=" footer-ul list ">
